fixing contrast error w01

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -78,12 +78,12 @@ nav {
   font-weight: 800;
   grid-column: 1/2;
   grid-row: 2/3;
-  background-color: rgba(255, 255, 255, 0.641);
+  background-color: rgba(5, 194, 252, 0.108);
   color: rgb(5, 194, 252);
   border-radius: 5px;
   width: fit-content;
   height: fit-content;
-  padding: 0.5rem;
+  padding: 0.8rem;
 }
 
 .hero-info h3,
@@ -91,6 +91,7 @@ nav {
   margin: 0.3rem 0;
   padding-left: 0.3rem;
   padding-bottom: 0.3rem;
+  color: #000;
 }
 
 .hero-info a {
